Uploading Bezier Curves

--- a/.gitignore
+++ b/.gitignore
@@ -250,3 +250,6 @@ paket-files/
 # JetBrains Rider
 .idea/
 *.sln.iml
+/Bezier Curves/Bezier Curves/sfml-graphics-2.dll
+/Bezier Curves/Bezier Curves/sfml-system-2.dll
+/Bezier Curves/Bezier Curves/sfml-window-2.dll
