--- a/Ear Clipping Triangulation/Ear Clipping Triangulation/Ear Clipping Triangulation.vcxproj
+++ b/Ear Clipping Triangulation/Ear Clipping Triangulation/Ear Clipping Triangulation.vcxproj
@@ -113,10 +113,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="func.h" />
+    <ClInclude Include="Shapes.h" />
+    <ClInclude Include="utility.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Shapes.cpp" />
+    <ClCompile Include="utility.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
