Added ConvexHull source and header, moved functions from main to utility.h, some comments and refactor

--- a/Convex Hull/Convex Hull/Convex Hull.vcxproj
+++ b/Convex Hull/Convex Hull/Convex Hull.vcxproj
@@ -113,11 +113,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ConvexHull.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Shapes.cpp" />
     <ClCompile Include="utility.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ConvexHull.h" />
     <ClInclude Include="Shapes.h" />
     <ClInclude Include="utility.h" />
   </ItemGroup>
