--- a/Convex Hull/Convex Hull/Convex Hull.vcxproj.filters
+++ b/Convex Hull/Convex Hull/Convex Hull.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="utility.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ConvexHull.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Shapes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="utility.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ConvexHull.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
